# doc2talk

./: .gitignore  CHANGELOG.md  README.md  build_web.py  pyproject.toml
docs/examples/: README.md  advanced_usage.py  custom_models.py  simple_usage.py
docs/releases/: 2025-03-14-v0.1.1.md
examples/: advanced_usage.py  simple_usage.py
src/doc2talk/: __init__.py  __main__.py  cli.py  core.py  doc2talk.py  docgraph.py  models.py
src/doc2talk/web/: __init__.py  server.py
tests/: test_core.py  test_doc2talk.py  test_publish.py
web/: README.md  package-lock.json  package.json  tailwind.config.js
web/public/: index.html
web/src/: App.css  App.tsx  index.tsx
web/src/components/: ChatInterface.tsx  CommandPalette.tsx  SessionManager.tsx  SettingsEditor.tsx
