[build-system]
requires = ["hatchling>=1.0.0"]
build-backend = "hatchling.build"

[project]
name = "doc2talk"
version = "0.1.1"
description = "A library that enables a hallucination-free conversations with code repositories."
readme = "README.md"
authors = [
    {name = "Your Name", email = "your.email@example.com"},
]
license = {text = "MIT"}
requires-python = ">=3.8"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]
dependencies = [
    "requests>=2.28.0",
    "pydantic>=2.0.0",
    "msgpack>=1.0.5",
    "zstandard>=0.20.0",
    "litellm>=1.63.7",
    "rich>=13.9.4",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "mypy>=1.0.0",
    "ruff>=0.1.0",
]

[project.scripts]
doc2talk = "doc2talk.__main__:main_entry_point"

[project.urls]
Homepage = "https://github.com/unclecode/doc2talk"
Issues = "https://github.com/unclecode/doc2talk/issues"
Documentation = "https://doc2talk.readthedocs.io/"

[tool.hatch.build.targets.wheel]
packages = ["src/doc2talk"]

[tool.hatch.build.targets.sdist]
include = [
    "src/doc2talk",
    "tests",
    "README.md",
    "LICENSE",
    "CHANGELOG.md",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"

[tool.black]
target-version = ["py38"]
include = '\.pyi?$'

[tool.isort]
profile = "black"

[tool.ruff]
target-version = "py38"
select = ["E", "F"]
ignore = ["E501", "W"]  # Ignore warnings (W)
# target-version = "py38"
# select = ["E", "F", "I", "B", "W"]
# ignore = ["E501"]

[tool.mypy]
python_version = "3.8"
warn_return_any = false  # Disable warnings for return any
disallow_untyped_defs = false  # Allow untyped definitions
disallow_incomplete_defs = false  # Allow incomplete definitions
# python_version = "3.8"
# warn_return_any = true
# warn_unused_configs = true
# disallow_untyped_defs = true
# disallow_incomplete_defs = true

